k8s-manifests/consumer/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consumer
  labels:
    name: consumer
    app: api-gateway-poc
