k8s-manifests/consumer/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
  namespace: consumer
  labels:
    app: consumer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: consumer
