k8s-manifests/consumer/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-ingress
  namespace: consumer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - consumer.jim00.pd.test-rig.nl
    secretName: consumer-tls-cert
  rules:
  - host: consumer.jim00.pd.test-rig.nl
    http:
      paths:
      - path: /(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: consumer-service
            port:
              number: 80
